@startuml
class MyLightingShaderGUI {
    + <<override>> OnGUI(editor:MaterialEditor, properties:MaterialProperty[]) : void
}
enum SmoothnessSource {
    Uniform,
    Albedo,
    Metallic,
}
enum RenderingMode {
    Opaque,
    Cutout,
    Fade,
    Transparent,
}
enum TessellationMode {
    Uniform,
    Edge,
}
class RenderingSettings <<struct>> {
    + renderType : string
    + zWrite : bool
}
ShaderGUI <|-- MyLightingShaderGUI
MyLightingShaderGUI +-- SmoothnessSource
MyLightingShaderGUI +-- RenderingMode
MyLightingShaderGUI +-- TessellationMode
MyLightingShaderGUI +-- RenderingSettings
RenderingSettings --> "queue" RenderQueue
RenderingSettings --> "srcBlend" BlendMode
RenderingSettings --> "dstBlend" BlendMode
@enduml
